# nb-bot

./: .gitignore  bot.py  pyproject.toml
src/plugins/: auto_render.py  block.py  html_render.py  raw.py
